# django-nextjs

./: .gitignore  Makefile  README.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/config/: permissions.py  settings.py  urls.py
backend/config/components/: unfold.py
backend/config/settings/: unfold.py
client/: package-lock.json
frontend/: .env.example  .gitignore  README.md  package-lock.json
frontend/src/app/: page.js
server/: .gitignore  pyproject.toml
server/config/: settings.py
